Fixed: text overflowing on mobile. Added Dockerfile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 *,
 *::before,
 *::after {
@@ -136,7 +138,7 @@ body {
     gap: 10px;
     position: absolute;
     width: 505px;
-    height: 210px;
+    /* height: 210px; */
     left: 132px;
     top: 252px;
     z-index: 10;
@@ -307,7 +309,7 @@ p span {
 
 #why-we {
     display: flex;
-    height: 252px;
+    /* height: 252px; */
     margin-top: 80px;
 }
 
@@ -351,7 +353,7 @@ p span {
 
 .slide_filling {
     width: 238px;
-    height: 320px;
+    /* height: 320px; */
     border: solid 1px #A5A5A5;
     border-radius: 26px;
     margin: 0 auto;
